// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/LONG.proto";
import "../ccsds_mal/STRING.proto";
import "./CUInfo.proto";


package connection.protobuf;

message CUIdentifier {
extensions 7 to 107;

  optional ccsds_mal.protobuf.LONG cUID = 1;
  optional ccsds_mal.protobuf.STRING channelName = 2;
  optional ccsds_mal.protobuf.STRING spacecraftID = 3;
  optional ccsds_mal.protobuf.STRING stationID = 4;
  optional ccsds_mal.protobuf.LONG flowID = 5;
  optional connection.protobuf.CUInfo cUInfo = 6;
}
